--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
+  "pre-commit": "predev",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -74,6 +75,7 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.0"
+    "eslint-plugin-react": "^7.27.0",
+    "pre-commit": "^1.2.2"
   }
 }
